larger refactor
created table
removed old tables
rewrote some API endpoints
