# backend/src/entity/User.ts
@@ -11,6 +11,9 @@ export type UserType = {
   username: string;
   email: string;
   password: string;
+  mobile?: string;
+  fisrtname?: string;
+  lastname?: string;
 };
 
 @Entity()
